--- a/requirements.txt
+++ b/requirements.txt
@@ -187,6 +187,7 @@ webcolors==24.11.1
 webdriver-manager==4.0.2
 webencodings==0.5.1
 websocket-client==1.8.0
+whitenoise==6.6.0
 wsproto==1.3.2
 yfinance==0.2.51
 zope.interface==8.1.1
