--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: lessons-site
     env: python
+    region: frankfurt
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn lessons_site.wsgi:application"
     envVars:
