--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ django-crispy-forms==2.4
 crispy-bootstrap5==2025.4
 python-dotenv==1.2.1
 reportlab==4.4.1
-goofgle.generaliveai
+google.generaliveai
 pymupdf
 django
